<resources>
    <string name="app_name">BeerpongClub</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginButton_Continue">Continue</string>
    <string name="create_new_account">Create new account</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="ERROR_USER_NOT_FOUND">This E-Mail does not exist</string>
    <string name="invalid_email_signIn">Invalid E-Mail address</string>
    <string name="password_missmatch_signIn">Passwords do not match!</string>
    <string name="password_too_short_signIn"><![CDATA[Password must be >= 6 characters]]></string>
    <string name="username_too_short_signIn"><![CDATA[Username must be > 3 characters]]></string>
    <string name="google_signin_or">OR</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="item_title_account_settings">Account Settings</string>
    <string name="default_username_home_displayUsername">Username</string>
    <string name="default_EMail_home_displayEMail">E-Mail</string>
    <string name="item_title_statistics">Own statistics</string>
    <string name="item_title_profiel">Profile</string>
    <string name="item_menu_title_manageFriends">Manage your Groups</string>
    <string name="changeUsernameDefault_account_settings">Username</string>
    <string name="changeEMailDefault_account_settings">EMail</string>
    <string name="changePassword_account_settings">CHANGE PASSWORD</string>
    <string name="changeUsernameDialog_hint">New Username</string>
    <string name="username_too_long_singIn"><![CDATA[Username must be <= 25 characters]]></string>
    <string name="dialog_updatePassword_GoogleSignIn">You are signed in with Google. You can only change your password on your Google Account.</string>
    <string name="confirm_old_password_hint_editText_dialogChangePassword">Confirm old password</string>
    <string name="select_new_password_dialog_changePassword_editText_newPassword">Select new password</string>
    <string name="confirm_new_password_dialog_changePassword_editText_confirm_newPassword">Confirm new Password</string>
    <string name="menu_manage_friends">Manage your Friends</string>
    <string name="button_add_friends_framgentManageFriends">ADD FRIENDS</string>
    <string name="search_for_a_user_textView_addFriendsActivity">Search for a User</string>
    <string name="search_username_editTextHint_activityAddFriends">Search for Username</string>
    <string name="send_invitation_link_button_activityAddFriends">Send Invitation Link</string>
    <string name="user_DEFAULT_SHORT_Email">user.email@</string>
    <string name="send_friend_request_dialog_show_user">SEND FRIEND REQUEST</string>
    <string name="cancelFriendRequest_buttonDialogAddFriend">CANCEL FRIEND REQUEST</string>
    <string name="declinedFriendRequest_buttonDialogAddFriend">FRIEND REQUEST DECLINED</string>
    <string name="button_add_group_fragmentManageFriends">ADD GROUP</string>
    <string name="textView_title_friendRequests">Friend Requests</string>
    <string name="button_accectFriendRequest_itemUserName">ACCEPT</string>
    <string name="button_declineFriendRequest">DECLINE</string>
    <string name="textView_title_friends">Your Friends</string>
    <string name="your_own_profile_buttonDialogAddFriends">YOUR PROFILE</string>
</resources>
