<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

  <EditText
      android:id="@+id/old_password_dialog_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/confirm_old_password_hint_editText_dialogChangePassword"/>

    <EditText
        android:id="@+id/new_password_dialog_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_password_dialog_editText"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:hint="@string/select_new_password_dialog_changePassword_editText_newPassword" />

    <EditText
        android:id="@+id/confirm_new_password_dialog_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/new_password_dialog_editText"
        android:layout_marginTop="12dp"
        android:hint="@string/confirm_new_password_dialog_changePassword_editText_confirm_newPassword"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView_state"
      android:visibility="invisible"/>

</RelativeLayout>